# quantbacktesterdash

./: CONTRIBUTING.md  Makefile  README.md  alembic.ini  app.py  pyproject.toml  requirements.txt  vix_dashboard.py
.github/workflows/: format.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_create_strategies_table.py
quant_desk_tools/: __init__.py  black_scholes.py  straddle.py  utils.py  vix_calculator.py
scripts/: seed_database.py
src/quant_trading_strategy_backtester/: __init__.py  __main__.py  app.py  backtest_runner.py  backtester.py  data.py  models.py  optimiser.py  optimiser_core.py  results_history.py  strategy_preparation.py  streamlit_ui.py
src/quant_trading_strategy_backtester/strategies/: __init__.py  base.py  buy_and_hold.py  mean_reversion.py  moving_average_crossover.py  pairs_trading.py
tests/: conftest.py  test_backtester.py  test_data.py  test_optimiser_core.py  test_strategy_preparation.py
tests/strategies/: test_base.py  test_buy_and_hold.py  test_mean_reversion.py  test_moving_average_crossover.py  test_pairs_trading.py  test_temo_crossover.py
