[project]
name = "quant-trading-strategy-backtester"
description = "A quantitative trading strategy backtester with an interactive dashboard. Enables users to implement, test, and visualise trading strategies using historical market data, featuring customisable parameters and key performance metrics. Developed with Python."
version = "0.1.2"
readme = "README.md"
authors = [
    { name = "Isaac Cheng", email = "47993930+IsaacCheng9@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "streamlit<2.0.0,>=1.37.0",
    "pandas<3.0.0,>=2.2.3",
    "numpy<3.0.0,>=2.1.2",
    "yfinance<1.0.0,>=0.2.61",
    "plotly<6.0.0,>=5.23.0",
    "polars<2.0.0,>=1.10.0",
    "sqlalchemy<3.0.0,>=2.0.35",
    "alembic<2.0.0,>=1.16.2",
    "lxml>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_trading_strategy_backtester"]

[tool.uv]
dev-dependencies = [
    "ruff<1.0.0,>=0.5.5",
    "pytest<9.0.0,>=8.3.2",
    "poethepoet<1.0.0,>=0.27.0",
    "watchdog<5.0.0,>=4.0.1",
    "coverage<8.0.0,>=7.6.0",
    "mypy<2.0.0,>=1.11.0",
    "pandas-stubs<3.0.0.0,>=2.2.2.240603",
    "pytest-cov<6.0.0,>=5.0.0",
]

[tool.poe.tasks]
app = "uv run streamlit run src/quant_trading_strategy_backtester/app.py"

[tool.commitizen]
version = "0.1.2"
version_files = [
    "pyproject.toml:version",
    "pyproject.toml:tool.commitizen.version",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = 'py310'

[tool.ruff.lint]
extend-select = ['I']

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
allow_untyped_globals = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["quant_trading_strategy_backtester.models"]
ignore_errors = true
